--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
+		"@types/marked": "^5.0.2",
 		"@types/node": "^22",
 		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
@@ -37,5 +38,9 @@
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.1",
 		"vite": "^7.1.7"
+	},
+	"dependencies": {
+		"gray-matter": "^4.0.3",
+		"marked": "^16.4.1"
 	}
 }
