--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 	},
 	"dependencies": {
 		"gray-matter": "^4.0.3",
-		"marked": "^16.4.1"
+		"marked": "^16.4.1",
+		"rehype-urls": "^1.2.0",
+		"unified": "^11.0.5"
 	}
 }
